updated connection api & connectionService methods
