# server/src/main/java/cz/plc/prx/docker/dash/api/SetDockerConnectionsApi.java
@@ -1,31 +1,0 @@
-/**
- * NOTE: This class is auto generated by the swagger code generator program (2.2.3).
- * https://github.com/swagger-api/swagger-codegen
- * Do not edit the class manually.
- */
-package cz.plc.prx.docker.dash.api;
-
-import cz.plc.prx.docker.dash.model.DockerConnection;
-import io.swagger.annotations.*;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
-
-import javax.validation.Valid;
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2017-12-05T15:18:26.200Z")
-
-@Api(value = "setDockerConnections", description = "the setDockerConnections API")
-public interface SetDockerConnectionsApi {
-
-    @ApiOperation(value = "configure docker connection", notes = "", response = Void.class, tags={ "Docker", })
-    @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "OK", response = Void.class),
-        @ApiResponse(code = 201, message = "successfully created", response = Void.class) })
-    
-    @RequestMapping(value = "/setDockerConnections",
-        consumes = { "application/json" },
-        method = RequestMethod.POST)
-    ResponseEntity<Void> updateDockerConnections(@ApiParam(value = "docker connection model", required = true) @Valid @RequestBody DockerConnection user);
-
-}
